--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,10 +25,16 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
+    //Default start
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    //Default End
+
+    //Lottie animation lib
+    implementation 'com.airbnb.android:lottie:3.6.1'
+    //Material lib
+
 }
