--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
 
     //Lottie animation lib
     implementation 'com.airbnb.android:lottie:3.6.1'
+    implementation 'com.google.android.material:material:1.4.0-alpha01'
     //Material lib
 
 }
