--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 29
@@ -21,8 +22,8 @@ android {
         }
     }
 
-    viewBinding{
-        enabled=true
+    viewBinding {
+        enabled = true
     }
 
 }
@@ -35,6 +36,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.3.4'
     implementation 'androidx.navigation:navigation-ui:2.3.4'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'com.google.firebase:firebase-auth:16.0.5'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -49,5 +51,12 @@ dependencies {
     //Navigation
     implementation 'androidx.navigation:navigation-fragment:2.3.4'
     implementation 'androidx.navigation:navigation-ui:2.3.4'
+    //Firebase
+    implementation platform('com.google.firebase:firebase-bom:27.0.0')
+    //Dependency for the Firebase SDK for Google Analytics, when using the BoM, don't specify versions in Firebase dependencies
+    implementation 'com.google.firebase:firebase-analytics'
+    //For auth
+    implementation 'com.google.firebase:firebase-auth'
+
 
 }
