--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/bookcavelogo_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".profile.HelpC"></activity>
+        <activity
+            android:name=".HomeSeller"
+            android:label="@string/title_activity_home_seller"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".profile.HelpC" />
         <activity android:name=".profile.ContactDeveloper" />
         <activity android:name=".profile.PaymentHistoryC" />
         <activity android:name=".profile.OrderHistoryC" />
