--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
     //For auth
     implementation 'com.google.firebase:firebase-auth'
+    // Dependency for the Cloud Firestore library
+    implementation 'com.google.firebase:firebase-firestore'
 
 
 }
