--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,10 +22,6 @@ android {
         }
     }
 
-    viewBinding {
-        enabled = true
-    }
-
 }
 
 dependencies {
@@ -60,6 +56,13 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth'
     // Dependency for the Cloud Firestore library
     implementation 'com.google.firebase:firebase-firestore'
+    //Volley HTTP Library for Networking
+    implementation 'com.android.volley:volley:1.2.0'
+    //Google Books api
+    //implementation 'com.google.api-client:google-api-client:1.31.4'
+    //For images
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
 
 }
