--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.bookcave">
-
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/bookcavelogo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/bookcavelogo_round"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".profile.AboutApp"></activity>
+        <activity android:name=".AddBook"></activity>
+        <activity android:name=".profile.AboutApp" />
         <activity
             android:name=".HomeSeller"
             android:label="@string/title_activity_home_seller"
