--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth'
     // Dependency for the Cloud Firestore library
     implementation 'com.google.firebase:firebase-firestore'
+    // FirebaseUI for Cloud Firestore
+    implementation 'com.firebaseui:firebase-ui-firestore:7.1.1'
     //Volley HTTP Library for Networking
     implementation 'com.android.volley:volley:1.2.0'
     //Google Books api
