--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,8 +65,12 @@ dependencies {
     //For images
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    //refresh full
+    implementation 'com.baoyz.pullrefreshlayout:library:1.2.0'
     //for slider banner
     implementation 'com.github.denzcoskun:ImageSlideshow:0.0.6'
+    //Angolia
+    //cancelled
 
 
 }
