--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.bookcave">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -7,13 +8,16 @@
 
     <application
         android:allowBackup="true"
+        android:debuggable="true"
         android:icon="@mipmap/bookcavelogo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/bookcavelogo_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:usesCleartextTraffic="true">
-        <activity android:name=".BookInfoOrder"></activity>
+        android:usesCleartextTraffic="true"
+        tools:targetApi="m">
+        <activity android:name=".BuyBook"></activity>
+        <activity android:name=".BookInfoOrder" />
         <activity android:name=".BookInfo" />
         <activity android:name=".extras.PreviewBook" />
         <activity android:name=".AddBook" />
